--- a/index.html
+++ b/index.html
@@ -2,6 +2,11 @@
 <html>
   <head>
     <meta charset="utf-8" />
+    <link
+      rel="shortcut icon"
+      href="/public/Group 732logo.png"
+      type="image/x-icon"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>School Payments Dashboard</title>
   </head>
